<resources>
    <string name="app_name">File Recovery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="rating">Rating</string>
    <string name="share">Share to friends</string>
    <string name="policy">PRIVACY POLICY</string>
    <string name="link_policy" translatable="false">https://policy.com</string>
    <string name="link_more_app" translatable="false">https://play.google.com/store/apps/dev?id=5576552585771068815</string>
    <string name="more_app">More App</string>
    <string name="feedback">Feedback</string>
    <string name="scan">Scan</string>

    <string name="scan_tip">The App will show all the images(Deleted and Not Deleted). Just Keep looking and you will find photos you are looking for.\nPlease be patient and wait until it scans all folders and files.</string>
    <string name="how_to_work">How it works?</string>
    <string name="restore">Restore</string>
    <string name="restore_folder_path_photo" translatable="false">Restored_Photos</string>
    <string name="restore_folder_path_video" translatable="false">Restored_Videos</string>
    <string name="restore_folder_path_audio" translatable="false">Restored_Audios</string>
    <string name="view_restored_photos">View Restored Photos</string>
    <string name="setting">Settings</string>
    <string name="scan_wait">Please wait while scanning files…</string>
    <string name="not_found">No photos found</string>
    <string name="restore_now">Restore</string>
    <string name="restore_now2" translatable="false">Restore</string>
    <string name="let_start">Let\'s Start</string>
    <string name="restoring_number_format">Restored … %d files</string>
    <string name="restore_photo">Restore Deleted Files</string>
    <string name="photo_recovery">Photo Recovery</string>

    <string name="language_setting">Language</string>
    <string name="not_found_audio">Not found audio</string>
    <string name="analyzing">Analyzing…</string>
    <string name="video_recovery">Video Recovery</string>
    <string name="audio_recovery">Audio Recovery</string>
    <string name="restore_file">Restore File</string>
    <string name="restoring_video">Restoring video…</string>
    <string name="open_file">Open File</string>
    <string name="share_file">Share File</string>
    <string name="restoring_number_format_audio">Restored … %d files</string>
    <string name="feature">Feature</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="recovery_file">File Restored</string>
    <string name="photo_restored">Photo has been restored</string>
    <string name="see_all">See all</string>
    <string name="view_using">View using</string>
    <string name="all_file">All File</string>
    <string name="request_delete_all">Do you want delete all %s ?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="memory">Memory</string>
    <string name="used">Used</string>
    <string name="free">Free</string>
    <string name="delete_success">Delete successfully</string>
    <string name="files">"Files: %d"</string>
    <string name="default_notification_channel_id" translatable="false">file_recover_jm</string>
    <string name="allow_watch_ads" translatable="false">WATCH ADS</string>

    //Info id admob id publish
<!--    <string name="admob_app_id" translatable="false">ca-app-pub-6691965685689933~6787029656</string>-->
<!--    <string name="admob_native_language" translatable="false">ca-app-pub-6691965685689933/4110433185</string>-->
<!--    <string name="admob_native_tutorial" translatable="false">ca-app-pub-6691965685689933/5421086097</string>-->
<!--    <string name="admob_native_home" translatable="false">ca-app-pub-6691965685689933/4490046449</string>-->
<!--    <string name="admob_inter_splash" translatable="false">ca-app-pub-6691965685689933/2127267672</string>-->
<!--    <string name="admob_inter_splash_new" translatable="false">ca-app-pub-6691965685689933/5497205774</string>-->
<!--    <string name="admob_inter_splash_high" translatable="false">ca-app-pub-6691965685689933/4760186675</string>-->
<!--    <string name="admob_inter_tutorial" translatable="false">ca-app-pub-6691965685689933/1937136345</string>-->
<!--    <string name="admob_inter_click_home" translatable="false">ca-app-pub-6691965685689933/2797351511</string>-->
<!--    <string name="admob_inter_click_item" translatable="false">ca-app-pub-6691965685689933/7100392754</string>-->
<!--    <string name="admob_inter_recovery" translatable="false">ca-app-pub-6691965685689933/3080298837</string>-->
<!--    <string name="admob_native_scan" translatable="false">ca-app-pub-6691965685689933/3176964776</string>-->
<!--    <string name="admob_native_list_item" translatable="false">ca-app-pub-6691965685689933/2039637760</string>-->
<!--    <string name="admob_native_recovery_item" translatable="false">ca-app-pub-6691965685689933/4302344182</string>-->
<!--    <string name="admob_native_finish" translatable="false">ca-app-pub-6691965685689933/7188022660</string>-->
<!--    <string name="open_lunch_high" translatable="false">ca-app-pub-6691965685689933/8138556884</string>-->
<!--    <string name="open_lunch_high_new" translatable="false">ca-app-pub-6691965685689933/2056654217</string>-->
<!--    <string name="open_lunch_medium" translatable="false">ca-app-pub-6691965685689933/2047468827</string>-->
<!--    <string name="open_lunch_normal" translatable="false">ca-app-pub-6691965685689933/9734387158</string>-->
<!--    <string name="admob_open_app_resume" translatable="false">ca-app-pub-6691965685689933/9801588695</string>-->

    //Info id admob id test
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string> // id test
    <string name="admob_native_language" translatable="false">/6499/example/native</string>
    <string name="admob_native_tutorial" translatable="false">/6499/example/native</string>
    <string name="admob_native_home" translatable="false">/6499/example/native</string>
    <string name="admob_inter_splash" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_splash_new" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_splash_high" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_tutorial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_click_home" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_click_item" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_inter_recovery" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_scan" translatable="false">/6499/example/native</string>
    <string name="admob_native_list_item" translatable="false">/6499/example/native</string>
    <string name="admob_native_recovery_item" translatable="false">/6499/example/native</string>
    <string name="admob_native_finish" translatable="false">/6499/example/native</string>
    <string name="open_lunch_high" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="open_lunch_high_new" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="open_lunch_medium" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="open_lunch_normal" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_open_app_resume" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <string name="admob_full_reward" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
    <string name="email_feedback" translatable="false">glorymobile88@gmail.com</string>
    <string name="scan_tip_1">Select the file type you want to recover. Please be patient and wait until the app scans all folders and files</string>
    <string name="scan_tip_2">Search for the file you want to recover. Select the file and press the restore button.</string>
    <string name="scan_tip_note">Note: The app only works on 80% of Android devices. Some devices may not be able to recover the file you seek</string>

    <string name="facebook_app_id" translatable="false">1232552674030733</string>
    <string name="facebook_client_token" translatable="false">20945fd6f19af05f719b5d065ebda4ac</string>

    <string name="press_to_move" translatable="false"><![CDATA[Press & hold item to move]]></string>


    <string name="skip">SKIP</string>
    <string name="watch_ads_confirm_ring">Restore your files! \n Just watch a short promotional video and you can recover the selected file.</string>
    <string name="go_to_google_play">Review On Google Play</string>
    <string name="tks_to_rate">Thanks for your review!</string>
    <string name="are_you_like_me">Do you love this app?</string>
    <string name="rate_in_google_play">Please rate and comment your opinion on google play. Thank you!</string>
    <string name="send">Send</string>
    <string name="second">seconds</string>
    <string name="ads_after">Ads are displayed after</string>
    <string name="language_title">Language</string>
    <string name="text_title_thank">Thank You!</string>
    <string name="text_des_thank">Thank you for using our App. Would you to post your review on store. This will help and motivate us a lot. See you soon!</string>
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="step_note">Note</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="preview">Preview</string>

    <string name="please_select_language">Please select language!</string>


</resources>
