<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:tag="layout/activity_help_intro_0">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/bg_splash"
        app:layout_constraintHeight_percent="0.27"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/how_to_work"
        android:textColor="#000"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cv_use_intro" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_use_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cv_start"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardBackgroundColor="#F6F6F6"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/scan_tip"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/cv_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/btn_help"
        android:gravity="center"
        android:onClick="onStartClick"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/let_start"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
