<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:tag="layout/activity_help_intro_0"
    android:background="@drawable/bg_gradient_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="15dip"
            android:id="@+id/cv_use_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="-10dp"
            android:layout_above="@+id/cv_start"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/how_to_work"
                        android:fontFamily="@font/roboto_regular"/>
                    <TextView
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="16sp"
                        android:textColor="@color/text_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/scan_tip"
                        android:lineSpacingMultiplier="1.6"/>
                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>




    <androidx.cardview.widget.CardView
        android:id="@+id/cv_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:onClick="onStartClick"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_gravity="bottom">
        <TextView
            android:fontFamily="@font/roboto_regular"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_start"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>
