<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/bar_home_app">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_splash">
               <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/textsizetoolbar"/>

        <RelativeLayout
            android:layout_marginTop="5dip"
            android:id="@+id/lv_activate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/im_scan_bg2"
                android:background="@drawable/bg_scan_image"
                android:layout_width="180dip"
                android:layout_height="180dip"/>
            <com.skyfishjy.library.RippleBackground
                android:layout_width="210dip"
                android:layout_height="210dip"
                android:id="@+id/im_scan_bg"
                app:rb_color="#FCFEFF"
                app:rb_radius="36dp"
                app:rb_rippleAmount="3"
                app:rb_duration="3000"
                app:rb_scale="3"
                android:layout_centerInParent="true">
                <ImageButton
                    android:id="@+id/btnScan"
                    android:layout_width="130dip"
                    android:layout_height="130dip"
                    android:background="@drawable/round_shape"
                    android:layout_centerInParent="true"/>

                <com.romainpiel.shimmer.ShimmerTextView
                    android:visibility="gone"
                    android:id="@+id/stvScan"
                    android:text="@string/scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF4081"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_light"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/ivSearch"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    app:lottie_rawRes="@raw/search"
                    app:lottie_loop="true"
                    android:layout_centerInParent="true">

                </com.airbnb.lottie.LottieAnimationView>

            </com.skyfishjy.library.RippleBackground>

        </RelativeLayout>

        <TextView
            android:visibility="invisible"
            android:text="@string/analyzing"
            android:fontFamily="@font/roboto_light"
            android:layout_below="@id/im_scan_bg"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginBottom="5dip"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffefefef"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                style="@style/MainOptionStyle">
                <LinearLayout
                    style="@style/HorizontalLinearStyle">
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="80dip"
                        android:layout_height="80dip">
                        <ImageView
                            android:background="#FF9E80"
                            android:scaleType="centerInside"
                            android:src="@drawable/image_row"
                            style="@style/MainOptionImageStyle"/>
                    </RelativeLayout>
                    <LinearLayout
                        style="@style/MainOptionLayoutStyle">
                        <TextView
                            android:text="@string/photo_recovery"
                            style="@style/MainOptionTitleStyle"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvVideo"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                style="@style/MainOptionStyle">
                <LinearLayout
                    style="@style/HorizontalLinearStyle">
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="80dip">
                        <ImageView
                            android:background="#FF80AB"
                            android:src="@drawable/video_row"
                            style="@style/MainOptionImageStyle"/>
                    </RelativeLayout>
                    <LinearLayout
                        style="@style/MainOptionLayoutStyle">
                        <TextView
                            android:text="@string/video_recovery"
                            style="@style/MainOptionTitleStyle"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvAudio"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                style="@style/MainOptionStyle">
                <LinearLayout
                    style="@style/HorizontalLinearStyle">
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="80dip">
                        <ImageView
                            android:background="@color/teal_200"
                            android:src="@drawable/audio_row"
                            style="@style/MainOptionImageStyle"/>
                    </RelativeLayout>
                    <LinearLayout
                        style="@style/MainOptionLayoutStyle">
                        <TextView
                            android:text="@string/audio_recovery"
                            style="@style/MainOptionTitleStyle"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSetting"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                style="@style/MainOptionStyle">
                <LinearLayout
                    style="@style/HorizontalLinearStyle">
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="80dip">
                        <ImageView
                            android:background="#8C9EFF"
                            android:src="@drawable/settings_row"
                            style="@style/MainOptionImageStyle"/>
                    </RelativeLayout>
                    <LinearLayout
                        style="@style/MainOptionLayoutStyle">
                        <TextView
                            android:text="@string/setting"
                            style="@style/MainOptionTitleStyle"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>





</LinearLayout>